# ellar-todo

./: .gitignore  pyproject.toml  test_sql_app.db
alembic/: env.py
alembic/versions/: 07d46eddc3d3_added_user_table_and_relationship.py  2e15552467b0_renamed_todo_user_and_set_field_as_non_.py  488ad61db612_renamed_todo_user_and_set_field_as_non_.py  6534152e380c_added_user_table_and_relationship.py  6c4972bbab84_first_migration.py  844ca1a11017_initial_database_setup.py  f3c7b683be74_add_column_owner_to_todo_table.py
todo_app/: config.py  conftest.py  root_module.py  server.py  tempCodeRunnerFile.py
todo_app/db/: database.py  models.py
todo_app/todoapp/: controllers.py  module.py  schemas.py  services.py
todo_app/todoapp/tests/: test_controllers.py  test_models.py
todo_app/users/: controllers.py  module.py  schemas.py  services.py
todo_app/users/tests/: test_controllers.py
